# ai-cybersecurity-module-10

./: pyproject.toml
vulnerable_archive/: .env.example
vulnerable_archive/archiver/: views.py
vulnerable_archive/archiver/management/commands/: seed_data.py
vulnerable_archive/archiver/templates/archiver/: search.html  view_archive.html
vulnerable_archive/vulnerable_archive/: settings.py
