[project]
name = "vulnerable-archive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.0",
    "langchain>=1.2.4",
    "langchain-community>=0.4.1",
    "ollama>=0.6.1",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.1",
    "requests>=2.32.5",
]
